@@ -1,3 +1,8 @@
+2022-02-02 Gabriele Gorla <gorlik@yahoo.com>
+
+    * sdcc/src/mos6502/gen.c:
+      Implement cost based on both code size and cycles.
+
 2022-02-01 Gabriele Gorla <gorlik@yahoo.com>
 
     * sdcc/src/mos6502/gen.c:
